<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LayoutMenuActivity">

    <RelativeLayout
        android:fitsSystemWindows="true"
        android:background="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/bar_layout" layout="@layout/layout_toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnt_nav"
                    android:text="@string/menu_item_sub_title_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnt_tabbed"
                    android:text="@string/menu_item_sub_title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnt_bottom_sheet"
                    android:text="@string/menu_item_sub_title_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnt_scrolling"
                    android:text="@string/menu_item_sub_title_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnt_collapse"
                    android:text="@string/menu_item_sub_title_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_drawer"
                    android:text="Drawer Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnt_support_28"
                    android:text="Support 28 库"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_view_system"
                    android:text="View System"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_view_animate"
                    android:text="View Animate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_swipe"
                    android:text="Swipe Back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_adapter"
                    android:text="Screen Adapter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <View android:layout_below="@id/bar_layout"
            android:background="@drawable/bg_toolbar_shade"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

    </RelativeLayout>

</layout>