<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/bar_layout" layout="@layout/layout_toolbar"/>

        <ScrollView
            android:layout_below="@id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/what_for"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_what_for"
                    android:padding="8dp"
                    tools:text="This is the what for details for the demo test"
                    android:layout_margin="8dp"
                    android:background="#ddd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/what_is"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_what_is"
                    android:padding="8dp"
                    tools:text="This is the what for details for the demo test"
                    android:layout_margin="8dp"
                    android:background="#ddd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/about_author"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_author"
                    android:padding="8dp"
                    tools:text="This is the what for details for the demo test"
                    android:layout_margin="8dp"
                    android:background="#ddd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <View android:layout_below="@id/bar_layout"
            android:background="@drawable/bg_toolbar_shade"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

    </RelativeLayout>

</layout>